# leo-ai-content-ops-cn

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-content-ops.txt
.github/workflows/: tests.yml
content-ops/config/: automation.yaml  brand.yaml  editorial-policy.yaml  project-state.example.yaml  source-policy.yaml
content_ops/: automation.py  candidate_review.py  candidate_server.py  candidates.py  cards.py  cli.py  config.py  contracts.py  models.py  notifications.py  packaging.py  production.py  prompts.py  quality.py  review.py  scoring.py  server.py  source_collector.py  storage.py  validation.py
content_ops/providers/: __init__.py  deepseek.py
content_ops/templates/: candidates.html.j2  review.html.j2
docs/: DECISIONS.md  content-ops-runbook.md  content-release-checklist.md
docs/superpowers/plans/: 2026-07-12-candidate-schema-and-review-repair.md  2026-07-12-project-governance.md
docs/superpowers/specs/: 2026-07-12-candidate-schema-and-review-repair-design.md  2026-07-12-project-governance-design.md
scripts/: install-content-ops-task.ps1  uninstall-content-ops-task.ps1
tests/: test_automation.py  test_automation_e2e.py  test_candidate_server.py  test_candidates.py  test_cards.py  test_cli.py  test_config.py  test_contracts.py  test_deepseek.py  test_governance.py  test_notifications.py  test_packaging.py  test_production.py  test_quality.py  test_review.py  test_scheduler_scripts.py  test_scoring.py  test_source_collector.py  test_storage.py  test_validation.py
